style: fix feature cards to have consistent heights and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -980,6 +980,10 @@ section {
   border-radius: 5px;
   background: #fff;
   transition: 0.5s;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 .team .member .pic {
   overflow: hidden;
